...
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_medium_2"
        >

        <RadioButton
            android:id="@+id/rBtnRecentlyOpened"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_recent_opened"
            android:textSize="@dimen/text_regular_2x"
            />
        <RadioButton
            android:id="@+id/rBtnTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_title"
            android:textSize="@dimen/text_regular_2x"
            />

        <RadioButton
            android:id="@+id/rBtnAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_author"
            android:textSize="@dimen/text_regular_2x"
            />

...
